--- a/notebooks/Supplementary figure - SSI, Fisher Info & Bayesian Decoding.ipynb
+++ b/notebooks/Supplementary figure - SSI, Fisher Info & Bayesian Decoding.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup \n",
+    "\n",
+    "activate fisher_info_limits"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +31,7 @@
     "main_dir = '/Users/steeve_laquitaine/Desktop/CARLO/code/fisher-info-limits/'\n",
     "os.chdir(main_dir)\n",
     "\n",
+    "# import custom package\n",
     "import ssiProjectModule as ssiMod\n",
     "\n",
     "# setup parameters\n",
@@ -32,7 +42,9 @@
     "# setup paths\n",
     "#main_dir = '/home/cparis/00PhD/'\n",
     "main_dir = '/Users/steeve_laquitaine/Desktop/CARLO/code/fisher-info-limits/'\n",
-    "dat_dir_in = main_dir + 'Decoding Analysis/'\n",
+    "dat_dir_in = main_dir + 'data/decoding_analysis/'\n",
+    "data_dir = 'data/bayer_decoding_error/'+f'Bayes_Dec_Errs_{sample_size}reps_thetastep{theta_step}'+'.npz'\n",
+    "\n",
     "title = f'Stretch_BioQuads_multiplied_w_mean_g__theta_step={theta_step}_original_g_20240509_AREA.pkl'\n",
     "\n",
     "constant = 360/np.sqrt(2*np.pi*math.e)\n",
@@ -47,11 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bayes_dec_err = dict(np.load(f'Bayes_Dec_Errs_{sample_size}reps_thetastep{theta_step}'+'.npz'))['bayes_final_angles_errs']\n",
+    "bayes_dec_err = dict(np.load(data_dir))['bayes_final_angles_errs']\n",
     "\n",
     "fisher_info = np.array([ssiMod.FISHER_POISSON(stim, quad_tc) for quad_tc in data_dict['all_quad_tc'][:,bio_idx]])\n",
     "\n",
@@ -60,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
