fixed bayes error

--- a/notebooks/basic_model.ipynb
+++ b/notebooks/basic_model.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,8 @@
     "from scipy.optimize import minimize_scalar\n",
     "from scipy.special import radian as rad\n",
     "from scipy.stats import circstd\n",
+    "from tqdm import tqdm\n",
+    "from scipy.special import gammaln\n",
     "\n",
     "# setup project path\n",
     "main_dir = '/Users/steeve_laquitaine/Desktop/CARLO/code/fisher-info-limits/'\n",
@@ -51,7 +53,7 @@
     "stim = np.arange(0, 360, theta_step) # stimulus direction space\n",
     "\n",
     "# setup Bayesian parameters\n",
-    "N_TRIALS = 10000\n",
+    "N_TRIALS = 500\n",
     "\n",
     "# setup paths\n",
     "main_dir = '/Users/steeve_laquitaine/Desktop/CARLO/code/fisher-info-limits/'\n",
@@ -79,18 +81,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Bayesian (maximum likelihood) decoder\n",
+    "# Bayesian decoder\n",
     "\n",
     "def generate_responses(tuning_curves, true_direction_index, n_trials=10, seed=0):\n",
     "    \"\"\"\n",
     "    Generate Poisson spike counts for all neurons given a true direction.\n",
     "    \n",
     "    Parameters:\n",
-    "    - true_diretrue_direction_index: true motion direction index \n",
+    "    - true_direction_index: true motion direction index \n",
     "    - n_trials: number of trials to simulate\n",
     "    \n",
     "    Returns:\n",
@@ -109,12 +111,12 @@
     "    return responses\n",
     "\n",
     "\n",
-    "def log_likelihood(direction_index, observed_responses, tuning_curves):\n",
+    "def log_likelihood(direction_index, responses, tuning_curves):\n",
     "    \"\"\"Compute log likelihood of observed responses given a direction.\n",
     "    \n",
     "    Parameters:\n",
     "    - direction (float): candidate direction (degrees)\n",
-    "    - observed_responses: observed spike counts for all neurons\n",
+    "    - responses: observed spike counts for all neurons\n",
     "    \n",
     "    Returns:\n",
     "    - log_likelihood: log probability of the data\n",
@@ -124,41 +126,58 @@
     "\n",
     "    log_prob = 0\n",
     "    \n",
+    "    # Poisson log likelihood ( sum(r * ln(mean_r) - mean_r) )\n",
     "    for n_i in range(n_neurons):\n",
-    "\n",
     "        mean_firing_rate = tuning_curves[direction_index, n_i]\n",
-    "        \n",
-    "        # Poisson log likelihood ( sum(r * ln(mean_r) - mean_r) )\n",
-    "        log_prob += observed_responses[n_i] * np.log(mean_firing_rate + 1e-10) - mean_firing_rate\n",
+    "        log_prob += responses[n_i] * np.log(mean_firing_rate + 1e-10) - mean_firing_rate - gammaln(responses[n_i] + 1)\n",
     "    return log_prob\n",
     "\n",
     "\n",
-    "def decode_direction(observed_responses, tuning_curves, bounds=(0,180)):\n",
-    "    \"\"\"decode direction using maximum likelihood estimation (flat prior).\n",
+    "def compute_likelihood(responses, tuning_c):\n",
+    "    \"\"\"Calculate likelihoods for all candidate directions given responses.\n",
     "    \n",
-    "    Parameters:\n",
-    "    - observed_responses: observed spike counts for all neurons\n",
-    "    \n",
-    "    Returns:\n",
-    "    - decoded direction index: estimated direction index (integer)\n",
+    "    Args:\n",
+    "        responses (np.array): vector of n neurons responses\n",
+    "        tuning_c (np.array): tuning curve matrix of shape (n_directions, n_neurons)\n",
     "    \"\"\"\n",
-    "    # define negative log likelihood function for optimization\n",
-    "    def neg_log_likelihood(direction_index):\n",
-    "        return -log_likelihood(direction_index, observed_responses, tuning_curves)\n",
+    "    n_stim = tuning_c.shape[0]\n",
+    "    llh = []\n",
+    "    for candidate_dir_ix in range(n_stim):\n",
+    "        llh.append(log_likelihood(candidate_dir_ix, responses, tuning_c))\n",
+    "    return np.exp(np.array(llh))\n",
+    "\n",
+    "\n",
+    "def get_circular_mean(prob, directions):\n",
+    "    \"\"\"Simplest form assuming 360 evenly spaced directions from 0° to 359°\n",
+    "    \"\"\"\n",
+    "    # get directions\n",
+    "    dir = np.deg2rad(directions)\n",
     "    \n",
-    "    # search over full range of directions\n",
-    "    result = minimize_scalar(neg_log_likelihood, bounds=bounds, method='bounded')\n",
-    "    return int(result.x)\n",
+    "    # normalize probabilities\n",
+    "    prob = prob / np.sum(prob)\n",
+    "    \n",
+    "    # calculate components\n",
+    "    x = np.sum(prob * np.cos(dir))\n",
+    "    y = np.sum(prob * np.sin(dir))\n",
+    "    \n",
+    "    # return mean in degrees\n",
+    "    return np.degrees(np.arctan2(y, x)) % 360\n",
+    "\n",
+    "\n",
+    "def decode_direction(responses, tuning_c, stim):\n",
+    "    llh = compute_likelihood(responses, tuning_c)\n",
+    "    return get_circular_mean(llh, stim)\n",
     "\n",
     "\n",
     "def compute_bayesian_decoding_error(true_directions, tuning_c, n_trials=100, seed=0):\n",
     "\n",
     "    all_true_dirs = []\n",
     "    all_decoded_dirs = []\n",
-    "    all_errors = []\n",
+    "    all_errors_deg = []\n",
+    "    all_errors_rad = []\n",
     "\n",
     "    # loop over stimulus in stimulus space\n",
-    "    for dir_ix, true_dir in enumerate(true_directions):\n",
+    "    for dir_ix, true_dir in tqdm(enumerate(true_directions), total=len(true_directions)):\n",
     "\n",
     "        # (n trials, 4 neurons) responses\n",
     "        responses = generate_responses(tuning_c.T, int(dir_ix), n_trials=n_trials, seed=seed)\n",
@@ -166,38 +185,60 @@
     "        # loop over many trials\n",
     "        for trial in range(n_trials):\n",
     "            \n",
-    "            # decode each trial\n",
-    "            decoded_dir_ix = decode_direction(responses[trial,:], \n",
-    "                                              tuning_c.T, \n",
-    "                                              bounds=(0, len(true_directions)))\n",
-    "            decoded_dir = true_directions[decoded_dir_ix]\n",
+    "            #llh = compute_likelihood(responses[trial,:], tuning_c.T)\n",
+    "            #decoded_dir = get_circular_mean(llh, stim)\n",
+    "            decoded_dir = decode_direction(responses[trial,:], tuning_c.T, stim)\n",
+    "            \n",
+    "            # # decode each trial\n",
+    "            # decoded_dir_ix = decode_direction(responses[trial,:], \n",
+    "            #                                   tuning_c.T, \n",
+    "            #                                   bounds=(0, len(true_directions)-1))\n",
+    "            # decoded_dir = true_directions[decoded_dir_ix]\n",
     "\n",
     "            # compute circular error\n",
-    "            error = min(abs(decoded_dir - true_dir), 360 - abs(decoded_dir - true_dir))       \n",
+    "            error_deg = min(abs(decoded_dir - true_dir), 360 - abs(decoded_dir - true_dir))       \n",
+    "            error_rad = rad(error_deg, 0, 0)\n",
     "\n",
-    "            # record\n",
+    "            # record direction x trials\n",
     "            all_true_dirs.append(true_dir)\n",
     "            all_decoded_dirs.append(decoded_dir)\n",
-    "            all_errors.append(error)         \n",
+    "            all_errors_deg.append(error_deg)         \n",
+    "            all_errors_rad.append(error_rad)      \n",
     "\n",
     "    all_true_dirs = np.array(all_true_dirs)\n",
     "    all_decoded_dirs = np.array(all_decoded_dirs)\n",
-    "    all_errors = np.array(all_errors)\n",
+    "    all_errors_deg = np.array(all_errors_deg)\n",
+    "    all_errors_rad = np.array(all_errors_rad)\n",
     "\n",
     "    # calculate estimate errors as std\n",
-    "    stds = []\n",
+    "    stds_deg = []\n",
+    "    stds_circ = []\n",
+    "    \n",
     "    for _, true_dir in enumerate(true_directions):\n",
+    "\n",
     "        this_true_dir_pos = all_true_dirs== true_dir\n",
-    "        std = np.sqrt((all_errors[this_true_dir_pos]**2).mean())\n",
-    "        stds.append(std)\n",
-    "    stds = np.array(stds)\n",
+    "        \n",
+    "        # method 1: std over degrees\n",
+    "        std_deg = np.sqrt((all_errors_deg[this_true_dir_pos]**2).mean())\n",
+    "        \n",
+    "        # method 2: circular std over radians\n",
+    "        std_circ = circstd(all_errors_rad[this_true_dir_pos])\n",
+    "        \n",
+    "        # record\n",
+    "        stds_deg.append(std_deg)\n",
+    "        stds_circ.append(std_circ)\n",
+    "\n",
+    "    stds_deg = np.array(stds_deg)\n",
+    "    stds_circ = np.array(stds_circ)\n",
     "\n",
     "    return {\n",
     "        'true_directions': all_true_dirs,\n",
     "        'decoded_directions': all_decoded_dirs,\n",
-    "        'errors': all_errors,\n",
-    "        'stds': stds\n",
-    "    }        "
+    "        'errors_deg': all_errors_deg,\n",
+    "        'errors_rad': all_errors_rad,\n",
+    "        'stds_deg': stds_deg,\n",
+    "        'stds_circ': stds_circ\n",
+    "    }"
    ]
   },
   {
@@ -216,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -248,26 +289,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "closing parenthesis ']' does not match opening parenthesis '{' (1853657942.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[233], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    rad({0, 0], 0, 0)\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m closing parenthesis ']' does not match opening parenthesis '{'\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "rad({0, 0], 0, 0)\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -278,12 +299,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fisher information"
+    "### Fisher error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -291,8 +312,8 @@
      "output_type": "stream",
      "text": [
       "Fisher info shape: (180,)\n",
-      "CPU times: user 618 µs, sys: 581 µs, total: 1.2 ms\n",
-      "Wall time: 1.37 ms\n"
+      "CPU times: user 1.18 ms, sys: 1.23 ms, total: 2.41 ms\n",
+      "Wall time: 1.86 ms\n"
      ]
     }
    ],
@@ -311,34 +332,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bayesian decoding error"
+    "### Bayes error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "File \u001b[0;32m<timed exec>:5\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 25%|██▌       | 45/180 [00:23<01:10,  1.91it/s]"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "\n",
-    "# compute bayesian decoding mean squared error\n",
-    "results = compute_bayesian_decoding_error(stim, tuning_c, n_trials=N_TRIALS, seed=0)\n",
-    "\n",
-    "# unit-test\n",
-    "assert sum(results['true_directions']==stim[0])== 1000"
+    "bayes_data = compute_bayesian_decoding_error(stim, tuning_c, n_trials=N_TRIALS, seed=0)"
    ]
   },
   {
@@ -350,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +403,6 @@
     "\n",
     "# Tuning curves ----------------\n",
     "ax = fig.add_subplot(gs[0,0])\n",
-    "\n",
     "for j, tc in enumerate(tuning_c):\n",
     "    ax.plot(stim, tc, color = colors[j], linewidth=lw)\n",
     "\n",
@@ -417,7 +429,6 @@
     "ax2.yaxis.set_label_coords(1.35, y=0.5)\n",
     "ax2.set_ylabel('Fisher\\n'+r'Information', rotation=270, color = 'orange', size = labelsize)        \n",
     "\n",
-    "\n",
     "#gs.update(left=0.055,right=0.925,top=0.95,bottom=0.05)#,wspace=0.3,hspace=0.5)\n",
     "#ax2.set_xlabel(r'Direction of motion [$\\degree$]', size = labelsize)\n",
     "\n",
@@ -426,7 +437,7 @@
     "ax3.set_xlabel('Direction of motion [$\\degree$]', size = labelsize)\n",
     "ax3.set_ylabel('Decoding\\n'+r'Error [$\\degree$]', size = labelsize)  \n",
     "\n",
-    "ax3.plot(stim, results['stds'], color = 'blue', label='Bayesian error')\n",
+    "ax3.plot(stim, bayes_data['stds_deg'], color = 'blue', label='Bayesian error')\n",
     "ax3.legend(frameon=False, fontsize = legend_fontsize, loc=(0.01, 0.75))\n",
     "\n",
     "plt.tight_layout()\n",
