--- a/notebooks/retina_code.ipynb
+++ b/notebooks/retina_code.ipynb
@@ -18,9 +18,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mJupyter Server crashed. Unable to connect. \n",
+      "\u001b[1;31mError code from Jupyter: 1\n",
+      "\u001b[1;31mError executing Jupyter command 'notebook': [Errno 2] No such file or directory. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "# import packages\n",
     "import os\n",
@@ -77,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 531,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +334,8 @@
     "# setup parameters\n",
     "N_NEURONS = 4\n",
     "AMPLITUDE = 4000\n",
-    "WIDTH = 0.5\n",
+    "#WIDTH = 0.5\n",
+    "WIDTH = 3\n",
     "BASELINE = 0\n",
     "N_TRIALS=100\n",
     "\n",
@@ -345,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 534,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 532,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 536,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
