describe basic models

--- a/notebooks/basic_model.ipynb
+++ b/notebooks/basic_model.ipynb
@@ -4,13 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Standard models\n",
+    "# Basic models\n",
     "\n",
     "author: laquitainesteeve@gmail.com\n",
     "\n",
     "execution time:\n",
     "\n",
-    "tested on Apple M4 16GB RAM (no GPU required)"
+    "tested on Apple M4 16GB RAM (no GPU required)\n",
+    "\n",
+    "**Method**:\n",
+    "- tuning parameters: standard deviations are based on literature data and we assume continuous neuron orientation and direction preferences."
    ]
   },
   {
