refactor notebooks of figures

--- a/notebooks/fig1_basic_model.ipynb
+++ b/notebooks/fig1_basic_model.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Basic models of direction tuning\n",
+    "# Basic neural encoder\n",
     "\n",
     "author: laquitainesteeve@gmail.com\n",
     "\n",
@@ -12,6 +12,7 @@
     "\n",
     "tested on:  \n",
     "- Apple M4 16GB RAM (no GPU required)\n",
+    "- Ubuntu 180 GB RAM\n",
     "\n",
     "**Method**:\n",
     "- tuning parameters: standard deviations are based on literature data and we assume continuous neuron orientation and direction preferences."
