--- a/notebooks/fig2_SSI_Fisher_Info_Bayesian_Decoding.ipynb
+++ b/notebooks/fig2_SSI_Fisher_Info_Bayesian_Decoding.ipynb
@@ -4,14 +4,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Retina neural encoder\n",
+    "\n",
+    "execution time:\n",
+    "\n",
+    "tested on:  \n",
+    "\n",
+    "- Apple M4 16GB RAM (no GPU required)\n",
+    "- Ubuntu 180 GB RAM\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Setup \n",
     "\n",
-    "activate fisher_info_limits"
+    "\n",
+    "activate fisher_info_limits\n",
+    "\n",
+    "```python\n",
+    "python -m ipykernel install --user --name fisher_info_limits --display-name \"fisher_info_limits\"\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +47,7 @@
     "#import import_ipynb\n",
     "#import ipynb.fs.full.ssiProjectModule as ssiMod\n",
     "\n",
-    "main_dir = '/Users/steeve_laquitaine/Desktop/CARLO/code/fisher-info-limits/'\n",
+    "main_dir = '/home/steeve/steeve/idv/code/fisher-info-limits'\n",
     "os.chdir(main_dir)\n",
     "\n",
     "# import custom package\n",
@@ -41,8 +60,7 @@
     "\n",
     "# setup paths\n",
     "#main_dir = '/home/cparis/00PhD/'\n",
-    "main_dir = '/Users/steeve_laquitaine/Desktop/CARLO/code/fisher-info-limits/'\n",
-    "dat_dir_in = main_dir + 'data/decoding_analysis/'\n",
+    "dat_dir_in = os.path.join(main_dir, 'data/decoding_analysis/')\n",
     "data_dir = 'data/bayer_decoding_error/'+f'Bayes_Dec_Errs_{sample_size}reps_thetastep{theta_step}'+'.npz'\n",
     "\n",
     "title = f'Stretch_BioQuads_multiplied_w_mean_g__theta_step={theta_step}_original_g_20240509_AREA.pkl'\n",
@@ -59,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
