--- a/notebooks/fig2_SSI_Fisher_Info_Bayesian_Decoding.ipynb
+++ b/notebooks/fig2_SSI_Fisher_Info_Bayesian_Decoding.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -120,15 +120,16 @@
     "legend_fontsize = 15\n",
     "text_size = 30\n",
     "tick_labelsize = 20\n",
-    "\n",
     "plt.rcParams['xtick.labelsize']=tick_labelsize\n",
     "plt.rcParams['ytick.labelsize']=tick_labelsize\n",
     "mpl.rcParams['axes.spines.right']=False\n",
+    "\n",
     "fig = plt.figure(figsize=(25,15))\n",
     "\n",
     "gs = GS(5,4,wspace=0.3, hspace=0.75)\n",
     "colors = ['blue', 'green', 'red', 'gold']\n",
     "letters = ['A)', 'B)', 'C)', 'D)']\n",
+    "\n",
     "for i, quad in enumerate(chosen_quads):\n",
     "    print(quad)\n",
     "    \n",
@@ -236,12 +237,13 @@
     "\n",
     "gs.update(left=0.055,right=0.925,top=0.95,bottom=0.05)#,wspace=0.3,hspace=0.5)\n",
     "\n",
-    "# plt.savefig('Supplementary_figure_FisherInfo.jpg', bbox_inches='tight', dpi = 300)"
+    "# save figure\n",
+    "plt.savefig('figures/fig2_retina_encoder.svg', bbox_inches='tight', dpi = 400)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
