Add author and execution time

--- a/notebooks/fig1_basic_model.ipynb
+++ b/notebooks/fig1_basic_model.ipynb
@@ -8,11 +8,13 @@
     "\n",
     "author: laquitainesteeve@gmail.com\n",
     "\n",
-    "execution time:\n",
+    "Execution time: 1 sec\n",
     "\n",
-    "tested on:  \n",
+    "Tested on:  \n",
     "- Apple M4 16GB RAM (no GPU required)\n",
     "- Ubuntu 180 GB RAM\n",
+    "\n",
+    "\n",
     "\n",
     "**Method**:\n",
     "- tuning parameters: standard deviations are based on literature data and we assume continuous neuron orientation and direction preferences.\n",
