--- a/notebooks/fig2_SSI_Fisher_Info_Bayesian_Decoding.ipynb
+++ b/notebooks/fig2_SSI_Fisher_Info_Bayesian_Decoding.ipynb
@@ -6,12 +6,15 @@
    "source": [
     "# Retina neural encoder\n",
     "\n",
-    "execution time:\n",
+    "\n",
+    "author: carlo paris; modified by laquitainesteeve@gmail.com\n",
+    "\n",
+    "Execution time: 1 sec\n",
     "\n",
     "tested on:  \n",
     "\n",
     "- Apple M4 16GB RAM (no GPU required)\n",
-    "- Ubuntu 180 GB RAM\n"
+    "- Ubuntu 180 GB RAM"
    ]
   },
   {
