--- a/notebooks/fig2_SSI_Fisher_Info_Bayesian_Decoding.ipynb
+++ b/notebooks/fig2_SSI_Fisher_Info_Bayesian_Decoding.ipynb
@@ -24,10 +24,10 @@
     "## Setup \n",
     "\n",
     "\n",
-    "activate fisher_info_limits\n",
+    "activate fisher_info_limits2\n",
     "\n",
     "```python\n",
-    "python -m ipykernel install --user --name fisher_info_limits --display-name \"fisher_info_limits\"\n",
+    "python -m ipykernel install --user --name fisher_info_limits2 --display-name \"fisher_info_limits2\"\n",
     "```"
    ]
   },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
