--- a/notebooks/fig1_basic_model.ipynb
+++ b/notebooks/fig1_basic_model.ipynb
@@ -27,27 +27,18 @@
    "source": [
     "## Setup \n",
     "\n",
-    "activate fisher_info_limits\n",
+    "activate fisher_info_limits2\n",
     "\n",
     "```python\n",
-    "python -m ipykernel install --user --name fisher_info_limits --display-name \"fisher_info_limits\"\n",
+    "python -m ipykernel install --user --name fisher_info_limits2 --display-name \"fisher_info_limits2\"\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -102,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,15 +291,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.33 ms, sys: 12 µs, total: 1.34 ms\n",
-      "Wall time: 1.31 ms\n"
+      "CPU times: user 363 µs, sys: 0 ns, total: 363 µs\n",
+      "Wall time: 361 µs\n"
      ]
     }
    ],
@@ -333,15 +324,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.7 ms, sys: 26 µs, total: 1.72 ms\n",
-      "Wall time: 1.53 ms\n"
+      "CPU times: user 1.34 ms, sys: 9 µs, total: 1.35 ms\n",
+      "Wall time: 1.15 ms\n"
      ]
     }
    ],
@@ -356,22 +347,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 180/180 [04:12<00:00,  1.40s/it]"
+      "  0%|          | 0/180 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 180/180 [04:00<00:00,  1.34s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4min 12s, sys: 37.3 ms, total: 4min 12s\n",
-      "Wall time: 4min 12s\n"
+      "CPU times: user 4min, sys: 30.7 ms, total: 4min\n",
+      "Wall time: 4min\n"
      ]
     },
     {
@@ -392,15 +390,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 22.5 s, sys: 8.94 s, total: 31.4 s\n",
-      "Wall time: 31.4 s\n"
+      "CPU times: user 21.5 s, sys: 8.73 s, total: 30.3 s\n",
+      "Wall time: 30.3 s\n"
      ]
     }
    ],
@@ -421,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +525,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "fisher_info_limits2",
    "language": "python",
    "name": "python3"
   },
