--- a/notebooks/study/4_all_cells_bde_vs_ssi.ipynb
+++ b/notebooks/study/4_all_cells_bde_vs_ssi.ipynb
@@ -181,11 +181,11 @@
     "\n",
     "    # load the cell data\n",
     "    mat = sio.loadmat(os.path.join(CELLS_PATH, input_filename))\n",
-    "    bases = mat['U']\n",
-    "    imgs = mat['X']\n",
-    "    pcs = mat['X_lowd'] # all principal components\n",
-    "    fit = mat['f']      # tuning curve ??\n",
-    "    spikes = mat['r']   # response spikes\n",
+    "    #bases = mat['U']\n",
+    "    imgs = mat['X']     # sl - image\n",
+    "    pcs = mat['X_lowd'] # sl - all principal components\n",
+    "    fit = mat['f']      # sl - cell tuning curve (average response or receptive field?)\n",
+    "    # spikes = mat['r']   # sl - spikes\n",
     "    print(i, imgs.shape)\n",
     "    #     plt.matshow(imgs)\n",
     "\n",
