--- a/notebooks/study/5_multidim_ssi_and_comparison_w_BDE.ipynb
+++ b/notebooks/study/5_multidim_ssi_and_comparison_w_BDE.ipynb
@@ -114,18 +114,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "mat = sio.loadmat('carlo_data.mat')\n",
     "np.random.seed(10)\n",
     "\n",
-    "bases = mat['U']\n",
-    "imgs = mat['X']\n",
+    "# bases = mat['U']\n",
+    "# imgs = mat['X']\n",
+    "# spikes = mat['r']\n",
     "pcs = mat['X_lowd']\n",
-    "fit = mat['f']\n",
-    "spikes = mat['r']"
+    "fit = mat['f']\n"
    ]
   },
   {
