Add description to README

--- a/notebooks/fig3.ipynb
+++ b/notebooks/fig3.ipynb
@@ -608,17 +608,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculate SSI\n",
-    "\n",
-    "calculate prior and posterior entropy and ssi"
+    "## Compute SSI"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# compute SSI\n",
     "post_entropy = -np.sum(posterior*np.around(np.log2(posterior),8), axis=(1,2))\n",
     "prior_entropy = -np.sum(grid_prior*np.around(np.log2(grid_prior), 8))\n",
     "ssi = prior_entropy - np.sum(likelihood * np.tile(post_entropy[:,None,None], (1, *grid_x.shape)) ,axis=0)"
@@ -648,26 +647,6 @@
     "        post_ij = np.sum(posterior * np.tile(likelihood[:,i,j][:,None,None], (1, *likelihood.shape[1:])), axis=0)\n",
     "        delta = (grid_x - grid_x[i,j])**2+(grid_y-grid_y[i,j])**2\n",
     "        mse[i,j] = np.sum(post_ij*delta)\n",
-    "\n",
-    "# @njit(parallel=True, fastmath=True)\n",
-    "# def compute_mse(posterior, likelihood, grid_x, grid_y):\n",
-    "#     H, W = likelihood.shape[1], likelihood.shape[2]\n",
-    "#     K = posterior.shape[0]\n",
-    "#     mse = np.empty((H, W), dtype=np.float64)\n",
-    "    \n",
-    "#     for i in prange(H):\n",
-    "#         for j in range(W):\n",
-    "#             # compute weighted posterior for (i,j)\n",
-    "#             post_ij = np.zeros((H, W))\n",
-    "#             for k in range(K):\n",
-    "#                 post_ij += posterior[k] * likelihood[k, i, j]\n",
-    "            \n",
-    "#             delta = (grid_x - grid_x[i,j])**2 + (grid_y - grid_y[i,j])**2\n",
-    "#             mse[i,j] = np.sum(post_ij * delta)\n",
-    "    \n",
-    "#     return mse\n",
-    "\n",
-    "# mse = compute_mse(posterior, likelihood, grid_x, grid_y)\n",
     "\n",
     "rmse = np.sqrt(mse)\n",
     "# np.savez('BDE.npz', mse=mse, rmse=rmse)"
@@ -781,6 +760,13 @@
     "# rmse = dec['rmse']\n",
     "print(mse.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
