--- a/notebooks/study/6_fig3_with_errors.ipynb
+++ b/notebooks/study/6_fig3_with_errors.ipynb
@@ -479,40 +479,41 @@
     "# ax_bottom3.set_position([ax_pos.x0 - 0.5,  ax_pos.y0, ax_pos.width, ax_pos.height])\n",
     "cbar = fig.colorbar(im, ax=ax_bottom3, orientation='vertical', pad=0.05)\n",
     "\n",
-    "# # make a 1x2 subgrid inside the 3rd row\n",
-    "# gs_sub = gridspec.GridSpecFromSubplotSpec(\n",
-    "#     1,3, \n",
-    "#     subplot_spec=gs_main[3],\n",
-    "#     wspace=0.3,\n",
-    "#     hspace=1.1\n",
-    "# )\n",
-    "# vmin=np.min([rmse.min(), ssi_bound.min()])\n",
-    "# vmax=np.max([rmse.max(), ssi_bound.max()])\n",
+    "# make a 1x2 subgrid inside the 3rd row\n",
+    "gs_sub = gridspec.GridSpecFromSubplotSpec(\n",
+    "    1,3, \n",
+    "    subplot_spec=gs_main[3],\n",
+    "    wspace=0.3,\n",
+    "    hspace=1.1\n",
+    ")\n",
+    "vmin=np.min([rmse.min(), ssi_bound.min()])\n",
+    "vmax=np.max([rmse.max(), ssi_bound.max()])\n",
     "\n",
-    "# # SSI bound and Bayes error\n",
-    "# # - Bayes error  at PC??=??\n",
-    "# ax_bottom2 = fig.add_subplot(gs_sub[0,0])\n",
-    "# im = ax_bottom2.imshow(rmse, vmin=vmin, vmax=vmax)\n",
-    "# ax_bottom2.set_title(\"Bayes error\")\n",
-    "# cbar = fig.colorbar(im, ax=ax_bottom2, orientation='horizontal', pad=0.2)\n",
     "\n",
-    "# ax_bottom2 = fig.add_subplot(gs_sub[0,1])\n",
-    "# im = ax_bottom2.imshow(ssi_bound, vmin=vmin, vmax=vmax)\n",
-    "# ax_bottom2.set_yticks([],[])\n",
-    "# ax_bottom2.set_title(\"SSI error bound\")\n",
-    "# cbar = fig.colorbar(im, ax=ax_bottom2, orientation='horizontal', pad=0.2)\n",
+    "# SSI bound and Bayes error\n",
+    "# - Bayes error  at PC??=??\n",
+    "ax_bottom2 = fig.add_subplot(gs_sub[0,0])\n",
+    "im = ax_bottom2.imshow(rmse, vmin=vmin, vmax=vmax)\n",
+    "ax_bottom2.set_title(\"Bayes error\")\n",
+    "cbar = fig.colorbar(im, ax=ax_bottom2, orientation='horizontal', pad=0.2)\n",
     "\n",
-    "# # ssi bound  at PC??=??\n",
-    "# ax_bottom4 = fig.add_subplot(gs_sub[0,2])\n",
-    "# ax_bottom4.plot(np.arange(len(ssi)), ssi_bound[GRID_POS], color = 'b', label='SSI bound')\n",
-    "# ax_bottom4.plot(np.arange(len(ssi)), rmse[GRID_POS], color = 'r', label='Bayes error')\n",
-    "# ax_bottom4.set_ylim(0,10);\n",
-    "# pos = ax_bottom4.get_position()\n",
-    "# ax_bottom4.set_position([pos.x0 + 0.07, pos.y0, pos.width, pos.height])\n",
-    "# ax_bottom4.legend(bbox_to_anchor=(1,1))\n",
+    "ax_bottom2 = fig.add_subplot(gs_sub[0,1])\n",
+    "im = ax_bottom2.imshow(ssi_bound, vmin=vmin, vmax=vmax)\n",
+    "ax_bottom2.set_yticks([],[])\n",
+    "ax_bottom2.set_title(\"SSI error bound\")\n",
+    "cbar = fig.colorbar(im, ax=ax_bottom2, orientation='horizontal', pad=0.2)\n",
+    "\n",
+    "# ssi bound  at PC??=??\n",
+    "ax_bottom4 = fig.add_subplot(gs_sub[0,2])\n",
+    "ax_bottom4.plot(np.arange(len(ssi)), ssi_bound[GRID_POS], color = 'b', label='SSI bound')\n",
+    "ax_bottom4.plot(np.arange(len(ssi)), rmse[GRID_POS], color = 'r', label='Bayes error')\n",
+    "ax_bottom4.set_ylim(0,10);\n",
+    "pos = ax_bottom4.get_position()\n",
+    "ax_bottom4.set_position([pos.x0 + 0.07, pos.y0, pos.width, pos.height])\n",
+    "ax_bottom4.legend(bbox_to_anchor=(1,1))\n",
     "\n",
     "# report pearson correlation\n",
-    "# print(\"Pearson R b\\w:\", pearsonr(rmse.flatten(), -ssi.flatten()))\n",
+    "print(\"Pearson R b\\w:\", pearsonr(rmse.flatten(), -ssi.flatten()))\n",
     "\n",
     "fig.subplots_adjust(wspace=0.9, hspace=0.4)\n",
     "\n",
