--- a/notebooks/study/4_all_cells_bde_vs_ssi.ipynb
+++ b/notebooks/study/4_all_cells_bde_vs_ssi.ipynb
@@ -286,7 +286,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fisher_info_limits2",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
