--- a/notebooks/fig2.ipynb
+++ b/notebooks/fig2.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,6 +76,84 @@
     "bio_idx = np.where(data_dict['all_multipliers']==1.)[0][0]\n",
     "\n",
     "chosen_quads = np.array([201, 125, 104, 491])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset\n",
+    "\n",
+    "* descriptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['all_multipliers', 'all_quad_pars', 'all_quad_tc', 'all_ssis', 'all_quad_fwhm'])\n",
+      "(648, 56, 4, 5)\n",
+      "[[ 5.40625952e+02 -5.43997798e+00  3.16961095e-01  2.70261244e+00\n",
+      "   4.65610902e+01]\n",
+      " [ 3.56959681e+02  8.58656662e+01  1.34182514e-01  5.89973110e+00\n",
+      "   3.24828084e+01]\n",
+      " [ 4.60588743e+02  1.70400479e+02  4.79436346e-02  1.50517016e+01\n",
+      "   4.87312403e+01]\n",
+      " [ 2.22335766e+02 -9.64286512e+01  3.58006067e-01  2.35733984e+00\n",
+      "  -7.46146928e+00]]\n",
+      "[[ 8.58060007e+02 -2.06559820e+01  2.37367421e-01  1.36833315e+00\n",
+      "   3.74564562e+01]\n",
+      " [ 4.95056711e+02  9.79983531e+01  4.28942145e-02  7.20564692e+00\n",
+      "   4.40413013e+01]\n",
+      " [ 9.66955762e+02  1.69688390e+02  2.14032799e-01  1.27317324e+00\n",
+      "   3.77344552e+01]\n",
+      " [ 5.56806619e+02 -7.75902264e+01  1.22574361e-01  1.16092725e+00\n",
+      "   3.32107253e+01]]\n",
+      "[[ 2.39603981e+02  3.70390876e+01  3.67978110e-02  2.02111637e-01\n",
+      "   3.80074695e+01]\n",
+      " [ 3.09243758e+02  8.27616708e+01  9.29113531e-03  8.60728952e-01\n",
+      "   4.82176910e+01]\n",
+      " [ 3.85684049e+02 -1.49606613e+02  1.98159073e-01  1.51554191e-01\n",
+      "   2.46738614e+01]\n",
+      " [ 6.93041609e+02 -9.53984921e+01  4.50859236e-01  5.81873770e-20\n",
+      "   2.52759716e+01]]\n",
+      "[[ 2.66787776e+02  1.96956840e+01  7.55344311e-01  1.53117434e-01\n",
+      "  -3.17293462e+01]\n",
+      " [ 3.56959681e+02  8.58656662e+01  1.34182514e-01  5.89973110e+00\n",
+      "   3.24828084e+01]\n",
+      " [ 3.27506509e+02  1.75706713e+02  1.02633990e-02  7.97981919e+00\n",
+      "   5.61983566e+01]\n",
+      " [ 4.59570709e+02 -1.01346274e+02  4.76271802e-02  3.48803587e+00\n",
+      "   4.98681292e+01]]\n",
+      "[[ 1.53808775e+02  2.29331681e+01  9.42675529e-02  5.23586735e+00\n",
+      "   4.23377422e+01]\n",
+      " [ 1.44636427e+02  7.75136884e+01  2.25405876e-01  1.79482147e+00\n",
+      "   1.12495555e+01]\n",
+      " [ 2.11843840e+02 -1.66114595e+02  7.84069989e-02  8.07266596e-02\n",
+      "   3.36095230e+01]\n",
+      " [ 3.13331978e+01 -1.05622635e+02  6.29086667e-02  1.14324450e+00\n",
+      "   1.13016938e+01]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 648 quad of RGCs, each quad has 4 cells \n",
+    "# find the unique lines\n",
+    "print(data_dict.keys())\n",
+    "# np.where(data_dict['all_multipliers']==1)[0] # 34 (the width we focus on. The biological cell width)\n",
+    "print(data_dict['all_quad_pars'].shape)\n",
+    "print(data_dict['all_quad_pars'][:,34][0,:]) # 4 cells each, has 5 parameters for the flat tuning curve (area, preferred direction, width, baseline, flatness)\n",
+    "\n",
+    "# data_dict['all_quad_pars'][:,34][0,:].shape\n",
+    "print(data_dict['all_quad_pars'][201,34]) # 4 cells x 5 parameters for the first quad of RGCs\n",
+    "print(data_dict['all_quad_pars'][215,34]) # 4 cells x 5 parameters for the second quad of RGCs\n",
+    "print(data_dict['all_quad_pars'][104,34]) # 4 cells x 5 parameters for the third quad of RGCs\n",
+    "print(data_dict['all_quad_pars'][491,34]) # 4 cells x 5 parameters for the fourth quad of RGCs"
    ]
   },
   {
