initialize notebook for ilocal for 1D circular tuning

--- a/notebooks/fig2.ipynb
+++ b/notebooks/fig2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Retina neural encoder\n",
+    "# Retina encoder\n",
     "\n",
     "\n",
     "author: carlo paris; modified by laquitainesteeve@gmail.com\n",
