minor update to fig1 noteboko

--- a/notebooks/fig1.ipynb
+++ b/notebooks/fig1.ipynb
@@ -22,12 +22,12 @@
    "source": [
     "## Setup \n",
     "\n",
-    "Setup `fisher_info_limits2'"
+    "Setup \"_fisher_info_limits2_\" virtual environment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d509f21b",
    "metadata": {},
    "outputs": [],
