describe kernel setup

--- a/notebooks/fig1.ipynb
+++ b/notebooks/fig1.ipynb
@@ -22,7 +22,11 @@
    "source": [
     "## Setup \n",
     "\n",
-    "Setup \"_fisher_info_limits2_\" virtual environment"
+    "Setup \"_fisher_info_limits2_\" virtual environment\n",
+    "\n",
+    "```python\n",
+    "python -m ipykernel install --user --name fisher_info_limits2 --display-name \"fisher_info_limits2\"\n",
+    "```"
    ]
   },
   {
